--- a/index.html
+++ b/index.html
@@ -205,11 +205,16 @@
       </center>
 
   		  <br>
-  		  <table align=center width=850px>
+  		  <table align=center width=1050px>
   			  <tr>
-            <td width=350px>
+            <td width=300px>
     					<center>
-    	                	<a href="figs/preview.gif"><img src = "figs/preview.gif" width="90%"></img></href></a><br>
+    	                	<a href="figs/preview1.gif"><img src = "figs/preview1.gif" width="90%"></img></href></a><br>
+  					  </center>
+            </td>
+            <td width=300px>
+    					<center>
+    	                	<a href="figs/preview2.gif"><img src = "figs/preview2.gif" width="90%"></img></href></a><br>
   					  </center>
             </td>
           </tr>
@@ -220,7 +225,7 @@
 
   		  <table align=center>
           <div class='row'>
-            <!-- <div class='column'> -->
+            <div class='column'>
               <center>
                 <h1>Abstract</h1>
                 <p style="width:560px; text-align:left; color:darkslategray; ;">This paper proposes a self-supervised objective for learning representations
@@ -231,7 +236,13 @@
                   This leads to a memory representation that stores occluded objects and predicts their motion, to better localize them.
                   The resulting model outperforms existing approaches on several datasets of increasing complexity and realism, despite requiring minimal supervision, and hence being broadly applicable.</p>
               </center>
-            <!-- </div> -->
+            </div>
+            <div class="column" style='float:right; width:40%'>
+              <center>
+                <h1>Overview</h1>
+                <img src = "figs/overview1.png" width="90%"></img>
+              </center>
+            </div>
 
           </div>
         </table>
