--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
                   </td>
 	  	          <td align=center width=150px>
 	  					<center>
-                <span style="">[Code]</span>
-	  						<!-- <span style=""><a href="http://www.github.com/ajabri/videowalk"> [Code]</a></span> -->
+	  						<span style=""><a href="https://github.com/TRI-ML/RAM"> [Code]</a></span>
 		  		  		</center>
 		  		  	  </td>
                 <td align=center width=150px>
