--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
                   </td>
 	  	          <td align=center width=150px>
 	  					<center>
-	  						<span style=""><a href="https://github.com/TRI-ML/RAM"> [Code]</a></span>
+	  						<span><a href="https://github.com/TRI-ML/RAM"> [Code]</a></span>
 		  		  		</center>
 		  		  	  </td>
                 <td align=center width=150px>
 	  					<center>
-                <span style="">[Data]</span>
+                <span>[Data]</span>
 	  						<!-- <span style=""><a href="https://youtu.be/UaOcjxrPaho"> [Data]</a></span> -->
 		  		  		</center>
 		  		  	  </td>
