--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <td align=center width=150px>
 	  					<center>
                 <span>[Data]</span>
-	  						<!-- <span style=""><a href="https://youtu.be/UaOcjxrPaho"> [Data]</a></span> -->
+	  						<span><a href="https://github.com/TRI-ML/RAM/blob/master/readme/DATA.md"> [Data]</a></span>
 		  		  		</center>
 		  		  	  </td>
               </tr>
